--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,10 @@ workflows:
     jobs:
       - deploy
 jobs:
+
   deploy:
+    machine:
+      enabled: true
     steps:
       - add_ssh_keys:
           fingerprints:
