--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,14 @@ jobs:
     machine:
       enabled: true
     steps:
+      - checkout
       - add_ssh_keys:
           fingerprints:
             - "8b:d7:82:ae:42:7e:d4:20:ed:6e:98:eb:6b:1e:c2:26"
             - "93:67:09:95:be:98:e6:4d:2b:a3:36:8f:28:0e:d4:27"
       - run:
           name: ls pwd
-          command: git clone --depth 1 "$CIRCLE_REPOSITORY_URL" --branch "$CIRCLE_BRANCH"  && ls && pwd      
+          command: ls && pwd  # git clone --depth 1 "$CIRCLE_REPOSITORY_URL" --branch "$CIRCLE_BRANCH"  && 
       - run:
           name: add to known hosts
           command: ssh-keyscan 36.255.68.189 >> ~/.ssh/known_hosts &&  ssh-keyscan 54.255.248.85 >> ~/.ssh/known_hosts
