--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: ssh-keyscan 36.255.68.189 >> ~/.ssh/known_hosts &&  ssh-keyscan 54.255.248.85 >> ~/.ssh/known_hosts
       - run:
           name: scp
-          command: scp -rp . ec2-user@54.255.248.85:/tmp/
+          command: scp -rp $(pwd) ec2-user@54.255.248.85:/tmp/
       - run:
           name: run command
           command: ssh -o StrictHostKeyChecking=no ec2-user@54.255.248.85 echo 1
